Actions
Bug #12253
closedmib2.h: error: field 'tcp6ConnEntryInfo' has incomplete type 'tcpConnEntryInfo_s'
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
The following C++ program doesn't compile:
#include <inet/mib2.h> #include <inet/ip.h> int main() { return 0; }
/usr/include/inet/mib2.h:1456:28: error: field 'tcp6ConnEntryInfo' has incomplete type 'tcpConnEntryInfo_s' struct tcpConnEntryInfo_s tcp6ConnEntryInfo; ^~~~~~~~~~~~~~~~~ /usr/include/inet/mib2.h:1456:9: note: forward declaration of 'struct tcpConnEntryInfo_s' struct tcpConnEntryInfo_s tcp6ConnEntryInfo; ^~~~~~~~~~~~~~~~~~
The issue seems to be introduced by
commit a2f04351e04971ab0879872d264d6038c156b860 Author: Sebastien Roy <seb@delphix.com> Date: Fri May 29 13:47:23 2015 -0400 11547 Want connstat(1M) command to display per-connection TCP statistics
Related issues
Updated by Alexander Pyhalov over 2 years ago
Possible fix:
http://buildzone.oi-build.r61.net/mib2/
Updated by Alexander Pyhalov over 2 years ago
- Related to Bug #11547: Want connstat(1M) command to display per-connection TCP statistics added
Updated by Alexander Pyhalov over 2 years ago
Tested this change by building ptlib (C++) and net-snmp (C).
Updated by Gordon Ross over 2 years ago
Testing: (from ALP)
compare dis of some object files, using mib2.h, for example, kernel_sunos5.o, there's no difference
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit cebe54d9b6803d3cfa3b14a553098ba7da2fc624
commit cebe54d9b6803d3cfa3b14a553098ba7da2fc624 Author: Alexander Pyhalov <apyhalov@gmail.com> Date: 2020-01-28T19:35:06.000Z 12253 mib2.h: error: field 'tcp6ConnEntryInfo' has incomplete type 'tcpConnEntryInfo_s' Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Dan McDonald <danmcd@joyent.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions