12253 mib2.h: error: field 'tcp6ConnEntryInfo' has incomplete type 'tcpConnEntryInfo_s' Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Dan McDonald <danmcd@joyent.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>